complete first draft of hw-1

--- a/materials/section/macros.tex
+++ b/materials/section/macros.tex
@@ -51,6 +51,7 @@
 \newcommand{\EE}{\mbox{\bbf E}}
 \newcommand{\NN}{\mbox{\bbf N}}
 \newcommand{\KK}{\mbox{\bbf K}}
+\newcommand{\KL}{\mbox{\bbf KL}}
 
 % Vectors
 \renewcommand{\aa}{{\bf a}}
@@ -171,6 +172,7 @@
 \newcommand{\Xib}{\hbox{\boldmath$\Xi$}}
 
 % mixed symbols
+\newcommand{\cov}{\text{cov}}
 \newcommand{\sinc}{{\hbox{sinc}}}
 \newcommand{\diag}{{\hbox{diag}}}
 \renewcommand{\det}{{\hbox{det}}}
