--- a/hw/pset/sept_19.tex
+++ b/hw/pset/sept_19.tex
@@ -25,10 +25,8 @@ Feel free to ask students or instructors for help debugging code or whatever els
 though.
 When implementing algorithms you may not use any library (such as \texttt{sklearn})
 that already implements the algorithms but you may use any other library for
-data cleaning and numeric purposes (\texttt{numpy} or \texttt{pandas}). Make sure
-Use common
-sense.
-Problems are in no specific order.\\[1em]
+data cleaning and numeric purposes (\texttt{numpy} or \texttt{pandas}). Use common
+sense. Problems are in no specific order.\\[1em]
 
 
 \textbf{1} (\textbf{regression}). Download the data at 
@@ -150,7 +148,7 @@ Also show that
 \textbf{6} (\textbf{Murphy 2.16}) Suppose $\theta \sim \text{Beta}(a,b)$ such
 that
 \[
-    \PP(\theta; a,b) = \frac{1}{B(a,b)} x^{a-1}(1-x)^{b-1} = \frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)} x^{a-1}(1-x)^{b-1}
+    \PP(\theta; a,b) = \frac{1}{B(a,b)} \theta^{a-1}(1-\theta)^{b-1} = \frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)} \theta^{a-1}(1-\theta)^{b-1}
 \]
 Derive the mean, mode, and variance of $\theta$.
 
