add sept_19 soln manual

--- a/hw/pset/sept_19.tex
+++ b/hw/pset/sept_19.tex
@@ -16,14 +16,14 @@
 
 \begin{document}
 
-There are 8 problems in this set. 4 of the problems (you choose except this first
-set must include problem 1 and/or 2) are due on September 12,
-and the rest of the problems are due on September 19. Feel
+There are 8 problems in this set. 3 of the problems (no restrictions) are due
+on September 12, and another 4 of the problems are due on September 19. Feel
 free to work with other students, but make sure you write up the homework
 and code on your own (no copying homework \textit{or} code; no pair programming).
 Feel free to ask students or instructors for help debugging code or whatever else,
 though.
-When implementing algorithms you may not use any library (such as \texttt{sklearn})
+When implementing algorithms tu
+you may not use any library (such as \texttt{sklearn})
 that already implements the algorithms but you may use any other library for
 data cleaning and numeric purposes (\texttt{numpy} or \texttt{pandas}). Use common
 sense. Problems are in no specific order.\\[1em]
