--- a/hw/pset/sept_19.tex
+++ b/hw/pset/sept_19.tex
@@ -16,14 +16,13 @@
 
 \begin{document}
 
-There are 8 problems in this set. 3 of the problems (no restrictions) are due
-on September 12, and another 4 of the problems are due on September 19. Feel
-free to work with other students, but make sure you write up the homework
+There are 9 problems in this set. You need to do 3 problems (due in class on Monday)
+every week for 3 weeks. Note that this means you must eventually complete all problems.
+Feel free to work with other students, but make sure you write up the homework
 and code on your own (no copying homework \textit{or} code; no pair programming).
 Feel free to ask students or instructors for help debugging code or whatever else,
 though.
-When implementing algorithms tu
-you may not use any library (such as \texttt{sklearn})
+When implementing algorithms you may not use any library (such as \texttt{sklearn})
 that already implements the algorithms but you may use any other library for
 data cleaning and numeric purposes (\texttt{numpy} or \texttt{pandas}). Use common
 sense. Problems are in no specific order.\\[1em]
@@ -192,5 +191,14 @@ logistic regression.
 is in the exponential family and show that the generalized linear model
 corresponding to this distribution is the same as multinomial logistic
 regression.
+
+\textbf{9} Download the Iris dataset from \url{https://vincentarelbundock.github.io/Rdatasets/csv/datasets/iris.csv}
+(you can read about the history behind this dataset at \url{https://en.wikipedia.org/wiki/Iris_flower_data_set}).
+Our goal is to predict the subspecies of the Iris flower given the sepal length and petal
+width using Gaussian Discriminant Analysis (Murphy 4.2). Plot the dataset (with different
+colors for different classes) along with the mean parameters for regular (unlinked/nonlinear)
+Gaussian Discriminant Analysis. Report the accuracy on the entire dataset for running
+$\{$linear discriminant analysis with a bunch of different parameters of the regularization
+parameter $\lambda$, the nonlinear discriminant analysis you plotted above$\}$.
 
 \end{document}
