fix homework typo

--- a/hw/pset/oct_10.tex
+++ b/hw/pset/oct_10.tex
@@ -107,7 +107,7 @@ the gradient descent step with a threshold function
 \]
 so that each iterate
 \[
-    \xx_{i+1} = \mathrm{prox}_{\gamma}\left( \xx_i - \gamma \nabla f(\xx_i) \right)
+    \xx_{i+1} = \mathrm{prox}_{\lambda\gamma}\left( \xx_i - \gamma \nabla f(\xx_i) \right)
 \]
 where $\gamma$ is your learning rate. Tip: you can reuse most of your code from the
 first homework.\\[1em]
