fix homework typo

--- a/exam/math189r_fall_2016_midterm_solution.tex
+++ b/exam/math189r_fall_2016_midterm_solution.tex
@@ -267,7 +267,7 @@ please ask for clarification.
             \end{align*}
             so the Poisson distribution is in the exponential family with
             \begin{align*}
-                Z(\theta) &= e^{-\lambda} & h(x) &= \frac{1}{x!} & \phi(x) &= x & \theta &= \log\lambda.
+                Z(\theta) &= e^{\lambda} & h(x) &= \frac{1}{x!} & \phi(x) &= x & \theta &= \log\lambda.
             \end{align*}
             \vfill\vfill
         \item Consider creating a Generalized Linear Model from the Poisson distribution
