small nov_21 typo

--- a/hw/pset/nov_21.tex
+++ b/hw/pset/nov_21.tex
@@ -77,7 +77,7 @@ as above in problem (3).
 \begin{enumerate}[(a)]
     \item Suppose we fix $\Ub$. Find the optimal $\Vb$.
     \item Suppose we fix $\Vb$. Find the optimal $\Ub$.
-    \item Propose an EM-like (block coordinate ascent, to be exact) like algorithm
+    \item Propose an EM-like (block coordinate ascent, to be exact) algorithm
         for minimizing $f(\Ub,\Vb)$ using (a) and (b).
     \item Will the algorithm you propose in (c) necessarily converge to the global
         optimal?
